--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -4,9 +4,47 @@
   height: 100%;
   color: black;
 
-  &--form {
+  &--content {
     padding: 1rem;
     border-radius: 1rem;
     background: white;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    &--header {
+      text-align: center;
+      border-bottom: .1rem solid black;
+
+      h2 {
+        color: blue;
+        font-weight: bold;
+      }
+    }
+
+    &--form {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+
+      p {
+        margin: 0.5rem 0;
+      }
+
+      &--time {
+        background: transparent;
+        padding: 0.1rem 1rem;
+        border-radius: 1rem;
+        border: 0.1rem solid #7d7d7d;
+      }
+    }
   }
+}
+
+.button {
+  background: transparent;
+  color: black;
+  border: 0.1rem solid green;
+  border-radius: 2rem;
+  padding: 0.5rem 0;
 }
