--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,24 +1,24 @@
 <div class="home">
   <div class="home--content">
     <div class="home--content--header">
-      <h2>Informa a hora em que deseja</h2>
+      <h2>Informe:</h2>
     </div>
     <div class="home--content--form">
-      <div>
-        <p>*Defina quanto tempo o pote ficará aberto:</p>
+      <div class="home--content--form--font">
+        <p>*Defina quanto tempo o pote ficará aberto (em segundos):</p>
         <input [(ngModel)]="posts.openSeconds" class="home--content--form--time" type="number" placeholder="Informe o horário">
       </div>
 
-      <div>
-        <p>A partir de qual horário, começará a contagem?</p>
+      <div class="home--content--form--font">
+        <p>*A partir de qual horário, começará a contagem (em horas)? </p>
         <input [(ngModel)]="posts.setOpen" class="home--content--form--time" type="number" placeholder="Informe o horário">
       </div>
 
-      <div>
-        <p>De quanto em quanto ocorre a abertura?</p>
+      <div class="home--content--form--font">
+        <p>*De quanto em quanto tempo ocorrerá a abertura (em horas)?</p>
         <input class="home--content--form--time" type="number" maxlength="2" placeholder="Informe o horário" [(ngModel)]="posts.startHour" >
       </div>
-      <button class="button" (click)="showData()">Enviar</button>
     </div>
   </div>
+  <button class="button" (click)="showData()">Enviar</button>
 </div>
