--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -5,12 +5,13 @@
   color: black;
 
   &--content {
-    padding: 1rem;
+    padding: 1rem 1rem 4rem 1rem;
     border-radius: 1rem;
     background: white;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    position: relative;
 
     &--header {
       text-align: center;
@@ -25,7 +26,12 @@
     &--form {
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      gap: 3rem;
+      text-align: center;
+
+      &--font {
+        font-size: 1.1rem;
+      }
 
       p {
         margin: 0.5rem 0;
@@ -33,9 +39,10 @@
 
       &--time {
         background: transparent;
-        padding: 0.1rem 1rem;
+        padding: 0.4rem 1rem;
         border-radius: 1rem;
         border: 0.1rem solid #7d7d7d;
+        outline: none;
       }
     }
   }
@@ -46,5 +53,10 @@
   color: black;
   border: 0.1rem solid green;
   border-radius: 2rem;
-  padding: 0.5rem 0;
+  padding: 0.8rem 0;
+  width: 90vw;
+  position: absolute;
+  bottom: 51px;
+  font-weight: bold;
+  font-size: 1.3rem;
 }
