--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   color: black;
+  overflow: auto;
 
   &--content {
     padding: 1rem 1rem 4rem 1rem;
@@ -11,7 +12,6 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    position: relative;
 
     &--header {
       text-align: center;
@@ -55,8 +55,7 @@
   border-radius: 2rem;
   padding: 0.8rem 0;
   width: 90vw;
-  position: absolute;
-  bottom: 51px;
+  margin-top: 2rem;
   font-weight: bold;
   font-size: 1.3rem;
 }
