--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
   <a href="https://www.facens.br/">
-    <img src="../../../assets/images/facens.jpg">
+    <img src="../../../assets/images/esp32.png">
   </a>
 </div>
