--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -38,10 +38,10 @@
       }
 
       &--time {
-        background: transparent;
-        padding: 0.4rem 1rem;
-        border-radius: 1rem;
-        border: 0.1rem solid #7d7d7d;
+        background: #fbfbfb;
+        padding: 0.6rem 1rem;
+        border-radius: 0.3rem;
+        border: 0.01rem solid #757575;
         outline: none;
       }
     }
@@ -50,9 +50,9 @@
 
 .button {
   background: transparent;
-  color: black;
+  color: green;
   border: 0.1rem solid green;
-  border-radius: 2rem;
+  border-radius: 0.4rem;
   padding: 0.8rem 0;
   width: 90vw;
   margin-top: 2rem;
