--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -54,7 +54,7 @@
   border: 0.1rem solid green;
   border-radius: 0.4rem;
   padding: 0.8rem 0;
-  width: 90vw;
+  width: 100%;
   margin-top: 2rem;
   font-weight: bold;
   font-size: 1.3rem;
