--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -20,5 +20,5 @@
       </div>
     </div>
   </div>
-  <button class="button" (click)="showData()">Enviar</button>
+  <button class="button" [class.disabled]="!canPublish()" (click)="showData()">Enviar</button>
 </div>
